--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +12,12 @@
         android:id="@+id/informationTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/darker_gray"
+        android:textColor="@android:color/white"
+        android:textColorLink="@android:color/holo_orange_dark"
+        android:textSize="30sp"
         android:layout_above="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:textSize="30sp" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/buttonSeven"
@@ -25,6 +26,7 @@
         android:layout_alignParentStart="false"
         android:layout_alignParentTop="false"
         android:layout_marginTop="160dp"
+        android:background="@drawable/button_border_general"
         android:text="7"
         android:textSize="20sp" />
 
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/buttonSeven"
         android:layout_toEndOf="@+id/buttonSeven"
+        android:background="@drawable/button_border_general"
         android:text="8"
         android:textSize="20sp" />
 
@@ -41,8 +44,10 @@
         android:id="@+id/buttonNine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/buttonEight"
+        android:layout_alignBaseline="@+id/buttonEight"
+        android:layout_alignBottom="@+id/buttonEight"
         android:layout_toEndOf="@+id/buttonEight"
+        android:background="@drawable/button_border_general"
         android:text="9"
         android:textSize="20sp" />
 
@@ -54,6 +59,7 @@
         android:layout_alignBottom="@+id/buttonFive"
         android:layout_alignParentStart="false"
         android:layout_below="@+id/buttonSeven"
+        android:background="@drawable/button_border_general"
         android:text="4"
         android:textSize="20sp" />
 
@@ -63,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonEight"
         android:layout_toEndOf="@+id/buttonFour"
+        android:background="@drawable/button_border_general"
         android:text="5"
         android:textSize="20sp" />
 
@@ -72,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/buttonFive"
         android:layout_toEndOf="@+id/buttonEight"
+        android:background="@drawable/button_border_general"
         android:text="6"
         android:textSize="20sp" />
 
@@ -81,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/buttonFour"
         android:layout_below="@+id/buttonFour"
+        android:background="@drawable/button_border_general"
         android:text="1"
         android:textSize="20sp" />
 
@@ -91,6 +100,7 @@
         android:layout_alignBaseline="@+id/buttonThree"
         android:layout_alignBottom="@+id/buttonThree"
         android:layout_toStartOf="@+id/buttonThree"
+        android:background="@drawable/button_border_general"
         android:text="2"
         android:textSize="20sp" />
 
@@ -100,6 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonSix"
         android:layout_toEndOf="@+id/buttonFive"
+        android:background="@drawable/button_border_general"
         android:text="3"
         android:textSize="20sp" />
 
@@ -110,7 +121,9 @@
         android:layout_alignParentEnd="false"
         android:layout_alignTop="@+id/buttonNine"
         android:layout_toRightOf="@+id/buttonNine"
+        android:background="@drawable/button_border"
         android:text="/"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <Button
@@ -120,7 +133,9 @@
         android:layout_alignParentEnd="false"
         android:layout_below="@+id/buttonDivision"
         android:layout_toRightOf="@+id/buttonSix"
+        android:background="@drawable/button_border"
         android:text="*"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <Button
@@ -130,7 +145,9 @@
         android:layout_alignParentEnd="false"
         android:layout_below="@+id/buttonSix"
         android:layout_toRightOf="@+id/buttonThree"
+        android:background="@drawable/button_border"
         android:text="-"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <Button
@@ -140,7 +157,9 @@
         android:layout_alignParentEnd="false"
         android:layout_below="@+id/buttonSubtract"
         android:layout_toRightOf="@+id/buttonEqual"
+        android:background="@drawable/button_border"
         android:text="+"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <Button
@@ -149,6 +168,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonTwo"
         android:layout_toEndOf="@+id/buttonTwo"
+        android:background="@drawable/button_border_general"
         android:text="="
         android:textSize="20sp" />
 
@@ -158,6 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonTwo"
         android:layout_toEndOf="@+id/buttonOne"
+        android:background="@drawable/button_border_general"
         android:text="0"
         android:textSize="20sp" />
 
@@ -168,6 +189,7 @@
         android:layout_alignBottom="@+id/buttonZero"
         android:layout_below="@+id/buttonOne"
         android:layout_toStartOf="@+id/buttonTwo"
+        android:background="@drawable/button_border_general"
         android:text="."
         android:textSize="20sp" />
 
@@ -177,7 +199,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonAdd"
         android:layout_toEndOf="@+id/buttonEqual"
+        android:background="@drawable/button_border"
         android:text="C"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <EditText
@@ -187,8 +211,12 @@
         android:layout_above="@+id/buttonEight"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+        android:cursorVisible="false"
+        android:keepScreenOn="false"
         android:lines="2"
         android:maxLines="2"
+        android:singleLine="false"
+        android:textColorLink="@android:color/holo_orange_dark"
         android:textSize="30sp" />
 </RelativeLayout>
 </layout>
